--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
-  "name": "RnDoczPlay",
+  "name": "rn-docz-play",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "docz:dev": "docz dev",
+    "docz:build": "docz build"
   },
   "dependencies": {
     "react": "16.6.3",
+    "react-art": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-native": "0.57.8",
+    "react-native-web": "^0.10.0-alpha.1",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
+    "docz": "^0.13.7",
+    "docz-theme-default": "^0.13.7",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.51.1",
     "react-test-renderer": "16.6.3"
